--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -19,25 +19,27 @@
         app:cardCornerRadius="4dp"
         android:elevation="2dp"
         android:id="@+id/cardView">
-        <FrameLayout
-            android:layout_width="250dp"
-            android:layout_height="170dp">
+        <LinearLayout
+            android:layout_gravity="center"
+            android:layout_width="350dp"
+            android:layout_height="350dp"
+            android:orientation="vertical">
             <ImageView
-                android:layout_gravity="center"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="300dp"
                 android:id="@+id/image"
-                />
+                android:scaleType="centerCrop"/>
 
-        <TextView
-            android:id="@+id/name"
-            android:textSize="40sp"
-            android:textColor="@android:color/black"
-            android:gravity="center"
-            tools:text="hello"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-        </FrameLayout>
+            <TextView
+                android:id="@+id/name"
+                android:textSize="40sp"
+                android:paddingLeft="30sp"
+                android:textColor="@android:color/black"
+                android:gravity="center"
+                tools:text="hello"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </LinearLayout>
     </androidx.cardview.widget.CardView>
 
 
